--- a/src/app/pharmacy-form/pharmacy-form.component.css
+++ b/src/app/pharmacy-form/pharmacy-form.component.css
@@ -1,7 +1,12 @@
-.ng-valid[required], .ng-valid.required {
+input[type=text].ng-valid {
+  border-left: 5px solid gray;
+}
+
+input[type=text].ng-valid[required],
+input[type=text].ng-valid.required {
   border-left: 5px solid #42A948;
 }
 
-.ng-invalid:not(form) {
+input[type=text].ng-invalid:not(form) {
   border-left: 5px solid #a94442;
 }
