added map view and implemented search first draft

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,13 +5,13 @@
       <app-pharmacy-form [item]=item></app-pharmacy-form>
     </li>
   </ul>
-  <nav aria-label="Page navigation example">
+  <nav aria-label="Page navigation">
     <ul class="pagination">
-      <li class="page-item"><a class="page-link" href="./page=1">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      <li class="page-item"><a class="page-link" href="./dashboard?page={{ prevPagination }}">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="/dashboard">1</a></li>
+      <li class="page-item"><a class="page-link" href="/dashboard">2</a></li>
+      <li class="page-item"><a class="page-link" href="/dashboard">3</a></li>
+      <li class="page-item"><a class="page-link" href="./dashboard?page={{ nextPagination }}">Next</a></li>
     </ul>
   </nav>
 </div>
