implemented typeahead function for search on map

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,38 +1,45 @@
 <div id="featureProperties" class="row no-mlr">
   <div class="map col-9" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)" (leafletMapMoveEnd)="onMapMove($event)"></div>
   <div id="info" class="col-3 no-p">
-    <div *ngIf="name" class="info-box">
-      <h2>{{ name }}</h2>
-      <address class="mb-0">
-        {{ adr }}<br>
-        {{ zip }} {{ city }}<br>
-        {{ tel }}<br>
-        <a *ngIf="web" href="{{ web }}" target="_blank">{{ web }}</a>
-      </address>
-    </div>
-    <div *ngIf="!name" class="info-box">
+    <div class="info-box">
       <h2 class="text-center">
         Willkommen beim Apothekenfinder!
       </h2>
       <br>
       <div>
-  
-        <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+        <form (ngSubmit)="onSubmit()">
           <div class="col-auto">
             <label class="sr-only" for="inputSearch">Suche</label>
             <div class="input-group mb-2">
-              <input ngxTypeahead type="text" class="form-control" id="inputSearch" [(ngModel)]="searchFormModel.q" name="q" placeholder="Apotheke" [value]="query3" [taList]="staticList" (taSelected)="handleStaticResultSelected($event)">
+              <input ngxTypeahead type="text" class="form-control col-sm-12" id="inputSearch" placeholder="Stadt oder Postleitzahl" name="q" [value]="q" [taUrl]="url" [taParams]="params" [taApi]="api" (taSelected)="handleHttpResultSelected($event)"
+                autocomplete="off" [taItemTpl]="itemTpl">
               <div class="input-group-append">
                 <button type="submit" class="input-group-text">Suche</button>
               </div>
             </div>
           </div>
+
+          <ng-template #itemTpl let-result>
+            <div class="col-auto">
+              <span class="f-left">{{ result.result }}</span>
+            </div>
+          </ng-template>
         </form>
       </div>
     </div>
     <div *ngIf="!name">
       <p class="info-use">Klicken Sie auf einen Marker, um Adresse und Öffnungszeiten der gewählten Apotheke anzuzeigen.</p>
       <img src="./assets/unicorn-png-44512.png" width="90%" height="auto" class=" mx-auto d-block">
+    </div>
+    <div *ngIf="name" class="pharmacy-box">
+      <h2>{{ name }}</h2>
+      <address class="mb-0">
+        {{ adr }}<br>
+        {{ zip }} {{ city }}<br>
+        {{ tel }}<br>
+        <img *ngIf="web" src="./assets/www.svg" width="18" height="auto" class="mr-1">
+        <a *ngIf="web" href="{{ web }}" target="_blank">Website</a>
+      </address>
     </div>
     <div *ngIf="name" class="opening-hours">
       <h2>Öffnungszeiten</h2>
@@ -64,7 +71,7 @@
           </tr>
           <tr>
             <td width="12%">So:</td>
-            <td class="bold">{{ su }}</td>
+            <td>{{ su }}</td>
           </tr>
         </tbody>
       </table>
