--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -31,7 +31,13 @@
   min-height: 210px;
 }
 
-.info-box a {
+.pharmacy-box {
+  color: #fff;
+  padding: 1rem;
+  font-size: 1.3rem;
+}
+
+.pharmacy-box a {
   color: #fff;
 }
 
