added new map design and added custom markere due to aot compiling errors

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -17,9 +17,9 @@
 }
 
 .info-use {
-  font-family: 'Noto Sans TC', sans-serif;
-  color: #120e0e;
+  color: #0b4045;
   padding: 1rem;
+  line-height: 2.4rem;
   font-size: 1.8rem;
 }
 
