--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div *ngIf="!name">
-      <p class="info-use">Klicken Sie auf einen Marker, um Adresse und Öffnungszeiten der gewählten Apotheke anzuzeigen.</p>
+      <p class="info-use"><span>Klicken Sie auf einen Marker, um Adresse und Öffnungszeiten der gewählten Apotheke anzuzeigen.</span></p>
       <img src="./assets/unicorn-png-44512.png" width="90%" height="auto" class=" mx-auto d-block">
     </div>
     <div *ngIf="name" class="pharmacy-box">
