--- a/src/app/city-form/city-form.component.html
+++ b/src/app/city-form/city-form.component.html
@@ -5,27 +5,38 @@
     </div>
     <div class="col-9 form-group">
       <label>Stadt</label>
-      <input type="text" class="form-control" [(ngModel)]="citiesModel.city" name="city" #city="ngModel" required>
-      <div [hidden]="city.valid || city.pristine" class="alert alert-danger mt-2">
-        City is required
-      </div>
+      <input type="text" class="form-control" [(ngModel)]="citiesModel.city" name="city" #city="ngModel">
     </div>
     <div class="col-3 form-group">
-      <label>Zip</label>
+      <label>Postleitzahl</label>
       <input type="text" class="form-control" [(ngModel)]="citiesModel.zip" name="zip" #zip="ngModel" required>
       <div [hidden]="zip.valid || zip.pristine" class="alert alert-danger mt-2">
         Zip is required
       </div>
     </div>
     <div class="col-6 form-group">
-      <label>County</label>
+      <label>Sadtteil</label>
+      <input type="text" class="form-control" [(ngModel)]="citiesModel.district" name="district" #district="ngModel" required>
+      <div [hidden]="district.valid || district.pristine" class="alert alert-danger mt-2">
+        Zip is required
+      </div>
+    </div>
+    <div class="col-6 form-group">
+      <label>Landkreis</label>
       <input type="text" class="form-control" [(ngModel)]="citiesModel.county" name="county" #county="ngModel" required>
       <div [hidden]="county.valid || county.pristine" class="alert alert-danger mt-2">
         County is required
       </div>
     </div>
     <div class="col-6 form-group">
-      <label>Country</label>
+      <label>Bundesland</label>
+      <input type="text" class="form-control" [(ngModel)]="citiesModel.state" name="state" #state="ngModel">
+      <div [hidden]="state.valid || state.pristine" class="alert alert-danger mt-2">
+        Country is required
+      </div>
+    </div>
+    <div class="col-6 form-group">
+      <label>Land</label>
       <input type="text" class="form-control" [(ngModel)]="citiesModel.country" name="country" #country="ngModel">
       <div [hidden]="country.valid || country.pristine" class="alert alert-danger mt-2">
         Country is required
